--- a/deb/debian/config.properties
+++ b/deb/debian/config.properties
@@ -29,11 +29,11 @@ SILVERPEAS_DATA_HOME=/var/data/silverpeas
 # PERMSIZE_MAX=512
 # JAVA_OPTS=
 
-# DB_SERVERTYPE=POSTGRES
-# DB_SERVER=localhost
+DB_SERVERTYPE=POSTGRES
+DB_SERVER=localhost
 DB_USER=silverpeas
 DB_PASSWD=@@silver_pwd@@
-# DB_NAME=SilverpeasV5
+DB_NAME=silverpeas
 # MIN_POOL_SIZE=5
 # MAX_POOL_SIZE=200
 # IDLE_TIMEOUT=15
