--- a/files/config.properties
+++ b/files/config.properties
@@ -22,11 +22,11 @@
 
 # SILVERPEAS_HOME_DEPENDANT=${SILVERPEAS_HOME}
 SILVERPEAS_DATA_HOME=/var/data/silverpeas
-# SILVERPEAS_DATA_WEB=${SILVERPEAS_HOME}/data/web
+SILVERPEAS_DATA_WEB=/var/data/silverpeas/web
 # JBOSS_LISTEN_PORT=8000
 # JBOSS_SERVER_PROFILE=default
-# RAM_MAX=
-# PERMSIZE_MAX=512
+RAM_MAX=2048
+PERMSIZE_MAX=512
 # JAVA_OPTS=
 
 DB_SERVERTYPE=POSTGRES
