--- a/deb/debian/control
+++ b/deb/debian/control
@@ -6,8 +6,9 @@ Homepage: http://www.silverpeas.org/
 
 Package: silverpeas
 Architecture: all
-Depends: java2-runtime, sudo, postgresql, openoffice.org | libreoffice
-Suggests: default-jre-headless
+Depends: java6-runtime, sudo, postgresql (>= 8.2), openoffice.org | libreoffice
+Recommends: imagemagick, ghostscript, swftools (>= 0.9.1)
+Suggests: java6-runtime-headless
 Description: Silverpeas is an open source web portal providing useful tools and
  applications to facilitate the collaboration between teams and individuals
  within an organization or an association. It features:
