Split the package silverpeas into two packages: silverpeas which provides the collaborative portal itself, and silverpeas-postgresql which configures Silverpeas to be used with PostgreSQL as datasource; latter provides the virtual package silverpeas-datasource on which depends the package silverpeas

--- a/deb/debian/silverpeas/control
+++ b/deb/debian/silverpeas/control
@@ -6,7 +6,7 @@ Homepage: http://www.silverpeas.org/
 
 Package: silverpeas
 Architecture: all
-Depends: java6-runtime, sudo, postgresql (>= 8.2), openoffice.org | libreoffice
+Depends: java6-runtime, sudo, silverpeas-datasource, openoffice.org | libreoffice
 Recommends: imagemagick, ghostscript, swftools (>= 0.9.1)
 Suggests: java6-runtime-headless
 Description: Silverpeas is an open source web portal providing useful tools and
