--- a/deb/debian/silverpeas/control
+++ b/deb/debian/silverpeas/control
@@ -6,8 +6,8 @@ Homepage: http://www.silverpeas.org/
 
 Package: silverpeas
 Architecture: all
-Depends: java6-runtime, sudo, silverpeas-datasource, openoffice.org | libreoffice
-Recommends: imagemagick, ghostscript, swftools (>= 0.9.1)
+Depends: java6-runtime, sudo, silverpeas-datasource, imagemagick, ghostscript, openoffice.org | libreoffice
+Recommends: swftools (>= 0.9.1)
 Suggests: java6-runtime-headless
 Description: Silverpeas is an open source web portal providing useful tools and
  applications to facilitate the collaboration between teams and individuals
